# rust-pal

./: Cargo.toml  README.md  rustfmt.toml
src/: canvas.rs  common.rs  data.rs  game.rs  input.rs  lib.rs  main.rs  map.rs  pal.rs  play.rs  rng.rs  scene.rs  script.rs  sprite.rs  text.rs  textmgr.rs  ui.rs  utils.rs
src/mkf/: decompress.rs  mod.rs
tests/: midi.rs
