[package]
name = "pal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pal95"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = "0.1.17"
encoding_rs = { version = "0.8.34" }
rand = "0.8.5"
sdl2 = { version = "0.37.0", features = ["mixer"] }
