[package]
name = "pal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pal95"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { git = "https://github.com/bincode-org/bincode", tag = "v2.0.0-rc.3", version = "2.0.0-rc.3" }
chardetng = "0.1.17"
encoding_rs = { version = "0.8.34" }
minifb = "0.27.0"
rand = "0.8.5"
